Fix spacing, images, and various styles

--- a/assets/css/_base.scss
+++ b/assets/css/_base.scss
@@ -76,7 +76,7 @@ h6 {
 }
 
 .learn-more {
-  @apply text-navy;
+  @apply font-normal text-navy;
 
   svg {
     fill: var(--navy);
